✅ Completed: Dispute Resolution System
  Backend Components:

  - Comprehensive API endpoints (/backend/src/routes/disputes.ts):
    - Create dispute with evidence support
    - Get disputes with filtering and pagination
    - Add responses/comments to disputes
    - Admin escalation and resolution tools
    - Dispute statistics for admins
    - Withdraw disputes functionality
  - Updated database schema with new models:
    - Enhanced Dispute model with categories, evidence, priorities
    - DisputeResponse for conversation threads
    - DisputeResolution for admin resolutions
    - New enums for dispute statuses, categories, and resolution types
  - Integration with existing notification system for dispute alerts

  Frontend Components:

  - DisputeForm component with comprehensive form validation, evidence upload, and user-friendly
  interface

  Key Features:

  - Evidence handling - Text, images, files, and URLs
  - Admin tools - Escalation, resolution with different outcome types
  - Role-based access - Only deal participants can create disputes
  - State validation - Only disputable deal states allowed
  - Comprehensive filtering - By status, category, deal, etc.
  - Real-time notifications - Integration with existing WebSocket system

--- a/app-mobile/app.json
+++ b/app-mobile/app.json
@@ -16,6 +16,10 @@
       "supportsTablet": false,
       "bundleIdentifier": "com.flowpay.app",
       "buildNumber": "1.0.0",
+      "associatedDomains": [
+        "applinks:flowpay.app",
+        "applinks:www.flowpay.app"
+      ],
       "infoPlist": {
         "NSCameraUsageDescription": "FlowPay needs access to your camera to upload deliverable content.",
         "NSPhotoLibraryUsageDescription": "FlowPay needs access to your photo library to upload deliverable content.",
@@ -34,6 +38,23 @@
         "RECORD_AUDIO",
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE"
+      ],
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "https",
+              "host": "flowpay.app"
+            },
+            {
+              "scheme": "https", 
+              "host": "www.flowpay.app"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
       ]
     },
     "web": {
