--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,13 @@
     "docker:build": "docker build -t flowpay-backend .",
     "docker:run": "docker run -p 3001:3001 flowpay-backend"
   },
-  "keywords": ["escrow", "payments", "creators", "brands", "stripe"],
+  "keywords": [
+    "escrow",
+    "payments",
+    "creators",
+    "brands",
+    "stripe"
+  ],
   "author": "FlowPay Team",
   "license": "MIT",
   "dependencies": {
@@ -50,7 +56,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.10.4",
-    "@types/pdfkit": "^0.13.4",
+    "@types/pdfkit": "^0.13.9",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitest/coverage-v8": "^1.1.0",
