--- a/.env.example
+++ b/.env.example
@@ -1,40 +1,123 @@
-# Database
+# ============================================
+# FlowPay Backend Environment Configuration
+# ============================================
+
+# ----------------
+# Database & Cache
+# ----------------
+# PostgreSQL database connection URL
 DATABASE_URL=postgresql://username:password@localhost:5432/flowpay
 
-# Redis (for BullMQ job queue)
+# Redis configuration for BullMQ job queue and refresh token storage
 REDIS_URL=redis://localhost:6379
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
 
-# S3-compatible storage
+# ----------------
+# File Storage (S3)
+# ----------------
+# S3-compatible storage configuration (AWS S3, MinIO, DigitalOcean Spaces, etc.)
 S3_ENDPOINT=https://s3.amazonaws.com
 S3_ACCESS_KEY=your_access_key
-S3_SECRET_KEY=your_secret_key  
+S3_SECRET_KEY=your_secret_key
 S3_BUCKET=flowpay-files
 S3_REGION=us-east-1
 
-# Stripe
+# File upload limits and validation
+MAX_FILE_SIZE_MB=100
+ALLOWED_FILE_TYPES=image/*,video/*,application/pdf
+
+# ----------------
+# Payment Provider
+# ----------------
+# Stripe configuration
 STRIPE_SECRET_KEY=sk_test_...
 STRIPE_WEBHOOK_SECRET=whsec_...
 STRIPE_PUBLISHABLE_KEY=pk_test_...
 
-# JWT
-JWT_SECRET=your-super-secret-jwt-key
+# Default payment provider (stripe, crypto, mangopay)
+DEFAULT_PAYMENT_PROVIDER=stripe
+
+# ----------------
+# Authentication
+# ----------------
+# JWT configuration - MUST be changed in production!
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
 JWT_EXPIRES_IN=7d
 JWT_REFRESH_EXPIRES_IN=30d
 
-# App Configuration
+# ----------------
+# Application URLs
+# ----------------
+# Base URLs for frontend and API
 APP_BASE_URL=http://localhost:3000
 API_BASE_URL=http://localhost:3001
 
+# ----------------
 # Environment
+# ----------------
 NODE_ENV=development
+LOG_LEVEL=debug
 
-# Optional: File upload limits
-MAX_FILE_SIZE_MB=100
-ALLOWED_FILE_TYPES=image/*,video/*,application/pdf
-
-# Optional: Auto-release timer (days)
+# ----------------
+# Business Logic
+# ----------------
+# Auto-release timer for milestones (days)
 DEFAULT_APPROVAL_TIMEOUT_DAYS=5
 
-# Optional: Rate limiting
+# ----------------
+# Security & Rate Limiting
+# ----------------
+# Rate limiting configuration
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# WebSocket server port (optional, defaults to HTTP port + 1)
+WS_PORT=3002
+
+# ----------------
+# Email & Notifications
+# ----------------
+# Email service configuration (optional)
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASS=your-app-password
+# FROM_EMAIL=noreply@flowpay.com
+
+# Push notification service (optional)
+# FIREBASE_SERVICE_ACCOUNT_KEY=path/to/firebase-key.json
+
+# ----------------
+# Development & Testing
+# ----------------
+# Enable test logging in test environment
+# ENABLE_TEST_LOGGING=true
+
+# Webhook testing with ngrok
+# NGROK_TUNNEL_URL=https://your-tunnel.ngrok.io
+
+# =====================================
+# Production Deployment Considerations
+# =====================================
+#
+# 1. JWT_SECRET: Generate a cryptographically secure secret
+#    Example: openssl rand -hex 32
+#
+# 2. DATABASE_URL: Use connection pooling in production
+#    Example: postgresql://user:pass@host:5432/db?connection_limit=10
+#
+# 3. REDIS_URL: Use Redis with persistence enabled
+#    Example: redis://:password@redis-host:6379/0
+#
+# 4. S3 Configuration: Use IAM roles instead of access keys when possible
+#
+# 5. Rate Limiting: Adjust based on expected traffic
+#    - RATE_LIMIT_WINDOW_MS: Time window in milliseconds
+#    - RATE_LIMIT_MAX_REQUESTS: Max requests per window
+#
+# 6. Logging: Set LOG_LEVEL to 'info' or 'warn' in production
+#
+# 7. File Uploads: Consider using CloudFront or CDN for file delivery
