--- a/app-mobile/package.json
+++ b/app-mobile/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios", 
+    "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
@@ -17,37 +17,41 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@hookform/resolvers": "^3.3.2",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-picker/picker": "^2.11.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "@react-navigation/bottom-tabs": "^6.5.11",
     "@reduxjs/toolkit": "^2.0.1",
-    "react-redux": "^9.0.4",
     "axios": "^1.6.2",
+    "date-fns": "^3.0.6",
     "expo": "~50.0.6",
-    "expo-router": "~3.4.7",
-    "expo-font": "~11.10.2",
-    "expo-linking": "~6.2.2",
+    "expo-av": "~13.10.4",
+    "expo-camera": "~14.1.3",
     "expo-constants": "~15.4.3",
+    "expo-document-picker": "~11.10.1",
+    "expo-font": "~11.10.2",
+    "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "^14.1.5",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.7",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
-    "expo-secure-store": "~12.8.1",
-    "expo-document-picker": "~11.10.1",
-    "expo-image-picker": "~14.7.1",
-    "expo-camera": "~14.1.3",
-    "expo-av": "~13.10.4",
+    "nativewind": "^4.1.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-native": "0.73.4",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "react-hook-form": "^7.48.2",
-    "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.2",
-    "date-fns": "^3.0.6"
+    "react-redux": "^9.0.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
