Complete Agency Implementation Summary
  🎯 Core Features Delivered:

  1. Agency User Role & Database Schema
    - Added AGENCY to UserRole enum
    - Created comprehensive Agency, AgencyMembership, AgencyInvitation, and AgencySubscription models
    - Proper database relationships and constraints
  2. Tiered Subscription System
    - STARTER: $99/month, 5 creators max, 5% platform fee
    - PROFESSIONAL: $299/month, 25 creators max, 3.5% platform fee
    - ENTERPRISE: $999/month, 100 creators max, 2.5% platform fee
    - Progressive creator pricing beyond base limits
    - Stripe integration with webhooks
  3. Role-Specific User Experiences
    - Agency: Creator management, analytics, subscription management
    - Creator: Deal management, deliverable submissions, earnings tracking
    - Brand: Campaign management, creator hiring, performance tracking
    - Admin: Platform oversight, user management, system analytics
  4. Backend API Implementation
    - Complete CRUD operations for agencies (/api/agencies/*)
    - Subscription management endpoints (/api/subscriptions/*)
    - Creator invitation and management system
    - Stripe checkout and webhook handling
    - Usage analytics and billing history
  5. Frontend Components
    - Agency dashboard with real-time statistics
    - Comprehensive subscription management interface
    - Creator invitation and management flows
    - Role-specific navigation and routing
  6. Mobile App Support
    - Agency tab in navigation (conditional based on role)
    - Mobile-optimized subscription management
    - Agency profile settings and creator management
    - Native mobile UI patterns and interactions

  🔧 Technical Implementation:

  - Authentication: JWT-based with role-specific routing
  - Database: Prisma ORM with PostgreSQL, proper indexing and relations
  - Payments: Stripe integration with subscription lifecycle management
  - Frontend: React with TypeScript, modern UI components
  - Mobile: React Native with Expo Rout

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,11 @@ STRIPE_SECRET_KEY=sk_test_...
 STRIPE_WEBHOOK_SECRET=whsec_...
 STRIPE_PUBLISHABLE_KEY=pk_test_...
 
+# Stripe pricing tiers for agency subscriptions
+STRIPE_PRICE_STARTER=price_1234567890abcdef
+STRIPE_PRICE_PROFESSIONAL=price_1234567890abcdef
+STRIPE_PRICE_ENTERPRISE=price_1234567890abcdef
+
 # Default payment provider (stripe, crypto, mangopay)
 DEFAULT_PAYMENT_PROVIDER=stripe
 
